--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,4 +14,7 @@ variables:
 
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
   displayName: 'dotnet build $(buildConfiguration)'
